# backEnd-libraryDjango

./: .pdm-python  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
user/: apps.py  models.py  router.py  serializers.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py  0004_alter_user_options.py
